syntax = "proto3";

package node;

service NodeService {
    rpc JoinParent(JoinParentRequest) returns (JoinParentResponse);
}

message JoinParentRequest {};
message  JoinParentResponse {};